Color fixes and alignment
caught some misaligned and colored things

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1119,6 +1119,7 @@ No media query for `xs` since this is the default in Bootstrap */
 
     body p {
         font-size: 1.5vw;
+        filter: grayscale(1);
     }
 
     h2 {
@@ -1253,8 +1254,8 @@ No media query for `xs` since this is the default in Bootstrap */
     {
         background-image: url(../../public/images/GIFs/book-split/Frame1.gif); 
 
-        left: -30%;
-        top: -10%;
+        left: -20%;
+        top: -5%;
     }
 
     .getStarted button {
